<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/frame"
    tools:context=".fragment.weather_fragment.WeatherFragmentHaNoi">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/text_forcast"
        android:layout_alignBottom="@+id/imageView"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="59dp"
        android:layout_marginBottom="127dp"
        android:text="@string/paris"
        android:textColor="@color/text"
        android:textSize="@dimen/text_size_20"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/text_forcast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignTop="@+id/imageView"
        android:layout_alignBottom="@+id/imageView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="33dp"
        android:layout_marginTop="-45dp"
        android:layout_marginBottom="106dp"
        android:text="@string/rain"
        android:textColor="@color/text"
        android:textSize="@dimen/text_size_24" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/image_weather_size"
        android:layout_height="@dimen/image_weather_size"
        android:layout_centerInParent="true"
        android:contentDescription="@string/image_weather"
        android:src="@drawable/rain"
        app:tint="@color/tint_color_image_frag_weather_1" />

</RelativeLayout>